Revise the content.

--- a/src/index.html
+++ b/src/index.html
@@ -70,8 +70,8 @@
       <div class="card h-100">
         <img src="images/image3.jpg" style="width: 400px;height: 400px;" class="card-img-top" alt="景点3">
         <div class="card-body">
-          <h5 class="card-title">景点3</h5>
-          <p class="card-text">这是一个自然风光，适合徒步和摄影。</p>
+          <h5 class="card-title">Attraction 3</h5>
+          <p class="card-text">This is a natural landscape, suitable for hiking and photography</p>
           <a href="details/detail.html?id=3" class="btn btn-primary">查看详情</a>
         </div>
       </div>
